--- a/ui/templates/ui/show_steps.html
+++ b/ui/templates/ui/show_steps.html
@@ -21,6 +21,7 @@
             </td>
             <td>
                 <span class="user-actions"><a href="#" class="label label-danger dels" data-sid="{{ step.id }}">Delete</a></span>
+                <span class="user-actions"><a href="/admin/ui/prediction" class="label label-info">Edit Checkpoint</a></span>
             </td>
         </tr>
 	{% endfor %}
