--- a/ui/static/ui/css/site.css
+++ b/ui/static/ui/css/site.css
@@ -562,7 +562,7 @@ tr.pending-user:hover span.user-actions, tr.list-users:hover td div.btn-group, t
 }
 
 .admin-sidebar #content-related{
-	float: left;
+	/*float: left;*/
 }
 
 .dashboard .module caption a{
@@ -808,4 +808,8 @@ tr.pending-user:hover span.user-actions, tr.list-users:hover td div.btn-group, t
   background-repeat: repeat-x;
   filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff89cdef', endColorstr='#ff81bfde', GradientType=0);
   opacity: 1;
+}
+
+.user-actions span {
+  display: inline-block;
 }
