--- a/ui/templates/ui/base.html
+++ b/ui/templates/ui/base.html
@@ -31,6 +31,9 @@
     		{% if user.is_authenticated %}
                 <a class="btn btn-default" href="{% url 'accounts:logout' %}"><i class="icon-user"></i> Log out</a>
             {% endif %}
+            {% if user.is_staff %}
+                <a class="btn btn-default" href="/admin"><i class="icon-wrench"></i> Admin</a>
+            {% endif %}
 		</div>
 	</div>
   </div>
