--- a/ui/templates/ui/list_protocol.html
+++ b/ui/templates/ui/list_protocol.html
@@ -111,6 +111,12 @@
             <span class="help-block">You can only share your protocol with one peer at a time.</span>
             <button type="submit" class="btn btn-default btn-block">Share with a peer</button>
 		</form>
+          <hr>
+          <legend>Share with public</legend>
+          <p>
+          By clicking the following button you can build a flattened protocol file which can be uploaded to our open platform or any other place on the Internet. And other people can use the import function to cite your protocol.
+          </p>
+          <a class="btn btn-default btn-block" id="export-protocol-link" data-traceid="0" href="">Build a sharable protocol</a>
       </div>
       <div class="modal-footer">
         <button type="submit" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -223,6 +229,8 @@
     }
     function showShare(proId){
         $('#share #pro').val(proId);
+        $('#export-protocol').attr("data-traceid", proId);
+        $('#export-protocol-link').attr("href", "/ui/export-protocol?id="+proId);
         $('#share').modal();
     }
     function showSteps(recId){
