--- a/ui/templates/ui/manage_reference.html
+++ b/ui/templates/ui/manage_reference.html
@@ -12,7 +12,7 @@
         </div>
         <div class="form-group">
             <label class="control-label" for="name">Reference Value</label>
-            <input type="text" class="form-control" id="path" name="path" required />
+            <input type="text" class="form-control" id="path" name="path" maxlength="255" required />
         </div>
         <input type="submit" class="btn btn-success btn-large" value="Add" />
     </form>
