--- a/ui/templates/ui/add_job.html
+++ b/ui/templates/ui/add_job.html
@@ -4,6 +4,14 @@
 <div class="page-header">
     <h1>New Job</h1>
 </div>
+    <div class="disk-quota">
+        Disk Usage ({{ u_disk }} of {{ t_disk }}):
+        <div class="progress">
+            <div class="progress-bar progress-bar-info progress-bar-striped active" role="progressbar" aria-valuenow="{{ disk_per }}" aria-valuemin="0" aria-valuemax="100" style="width: {{ disk_per }}%">
+                <span class="sr-only">{{ disk_per }}% Used</span>
+            </div>
+        </div>
+    </div>
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
         <div class="panel panel-default">
             <div class="panel-heading" role="tab" id="single">
