Add hint for uploading file

--- a/ui/templates/ui/add_job.html
+++ b/ui/templates/ui/add_job.html
@@ -36,7 +36,7 @@
                         <div class="form-group">
                             <label for="inputFile">Input files <button type="button" class="btn btn-default" id="lf-trigger">Choose FTP file</button></label>
                             <input type="text" class="form-control" id="input_files" name="input_files" />
-                            <p class="help-block">Please use semicolons (";") to separate multiple files.</p>
+                            <p class="help-block">Please use semicolons (";") to separate multiple files. <a href="http://bioqueue.readthedocs.io/en/latest/faq.html#upload-file"><i class=" icon-question-sign"></i>How to upload files to BioQueue?</a></p>
                         </div>
                         <div id="lf-container" class="form-group alert alert-info alert-dismissable" role="alert" style="display: none;">
                             <label for="inputFile">Uploaded files:</label>
