New suffix rule

--- a/ui/templates/ui/add_protocol.html
+++ b/ui/templates/ui/add_protocol.html
@@ -1,5 +1,5 @@
 {% extends 'ui/base.html' %}
-{% block title %}Create Protocol | CBPQueue{% endblock %}
+{% block title %}Create Protocol | BioQueue{% endblock %}
 {% block content %}
 <div class="row-fluid">
     <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
