--- a/ui/templates/ui/variant_hint.html
+++ b/ui/templates/ui/variant_hint.html
@@ -8,6 +8,7 @@
         <li><code>Output:N-M</code>: The m-th output file of the n-th step (in alphabetical order).</li>
         <li><code>Suffix:X</code>: Output file(s) with a "X" suffix in last step.</li>
         <li><code>Suffix:N-X</code>: Output file(s) with a "X" suffix in the n-th step.</li>
+        <li><code>Suffix:N-X-M</code>: The m-th output file with a "X" suffix in the n-th step.</li>
         <li><code>AllOutputBefore</code>: All output files before this step.</li>
         <li><code>Job</code>: job ID.</li>
         <li><code>Workspace</code>: Local storage path for the job.</li>
