--- a/ui/templates/ui/manage_reference.html
+++ b/ui/templates/ui/manage_reference.html
@@ -11,8 +11,12 @@
             <input type="text" class="form-control" id="name" name="name" required />
         </div>
         <div class="form-group">
-            <label class="control-label" for="name">Reference Value</label>
+            <label class="control-label" for="path">Reference Value</label>
             <input type="text" class="form-control" id="path" name="path" maxlength="255" required />
+        </div>
+        <div class="form-group">
+            <label class="control-label" for="name">Description (optional)</label>
+            <textarea class="form-control" id="description" name="description" rows="3"></textarea>
         </div>
         <input type="submit" class="btn btn-success btn-large" value="Add" />
     </form>
@@ -26,6 +30,7 @@
             <th>ID</th>
             <th>Key</th>
             <th>Value</th>
+            <th>Description</th>
             <th>Operation</th>
         </tr>
         </thead>
@@ -35,7 +40,8 @@
                 <td>{{ ref.id }}</td>
                 <td>{{ ref.name }}</td>
                 <td>{{ ref.path }}</td>
-                <td><span class="user-actions"><span onclick="delProtocol(this);" data-rid="{{ ref.id }}" class="label label-danger" style="cursor:pointer;">Delete</span></span></td>
+                <td>{{ ref.description }}</td>
+                <td><span class="user-actions"><span onclick="delReference(this);" data-rid="{{ ref.id }}" class="label label-danger" style="cursor:pointer;">Delete</span></span></td>
             </tr>
         {% endfor %}
         </tbody>
@@ -57,7 +63,7 @@
 
 		function success(data){
 			if(data.status){
-                addNew(data.info, $("#name").val(), $("#path").val());
+                addNew(data.info, $("#name").val(), $("#path").val(), $("#description").val());
 				self[0].reset();
 			} else {
 				Messenger().post({
@@ -68,16 +74,16 @@
 			}
 		}
     });
-    function addNew(rid, key, value)
+    function addNew(rid, key, value, description)
     {
         var table1 = $('#rtable');
         var firstTr = table1.find('tbody>tr:first');
         var row = $("<tr class='pending-user'></tr>");
-        var td = "<td>"+rid+"</td><td>"+key+"</td><td>"+value+"</td><td><span class='user-actions'><span onclick='delProtocol(this);' data-rid='"+rid+"' class='label label-important' style='cursor:pointer;'>Delete</span></span></td>";
+var td = "<td>"+rid+"</td><td>"+key+"</td><td>"+value+"</td><td>"+description+"</td><td><span class='user-actions'><span onclick='delReference(this);' data-rid='"+rid+"' class='label label-important' style='cursor:pointer;'>Delete</span></span></td>";
         row.append(td);
         table1.append(row);
     }
-    function delProtocol(obj){
+    function delReference(obj){
 	    var self = $(obj);
         $.get("{% url 'ui:delete_reference' %}", {ref: self.attr("data-rid")}, function(data){
             if(data.status){
