Fix: Data too long for column 'name' at row 1

--- a/ui/templates/ui/add_protocol.html
+++ b/ui/templates/ui/add_protocol.html
@@ -14,7 +14,7 @@
                     <form class="form" id="create-protocol-form" method="post" action=".">
                         <div class="form-group">
                             <label class="control-label" for="name">Name</label>
-                            <input type="text" class="form-control input-xlarge" id="name" name="name" required />
+                            <input type="text" class="form-control input-xlarge" id="name" name="name" maxlength="500" required />
                         </div>
                         <h3>Steps</h3>
                         <div class="step-container">
