--- a/ui/templates/ui/settings.html
+++ b/ui/templates/ui/settings.html
@@ -5,6 +5,7 @@
     <div class="page-header">
         <h1>System Settings</h1>
     </div>
+    <p><b>Latest version:</b> <span id="github-version">Fetching...</span></p>
     <form class="form" method="post" action=".">
         <div class="form-group">
             <label class="control-label" for="path">Run folder</label>
@@ -85,5 +86,14 @@ $('.sliderbar').slider({
     formatter: function(value) {
         return 'Current value: ' + value;
     }
+});
+$.get("{% url 'ui:update_bioqueue' %}", function(data){
+    var msg = "";
+    if (data.status){
+        msg = data.info;
+    }else{
+        msg = "Can not connect to github, please check your connection.";
+    }
+    $("#github-version").html(msg);
 });
 {% endblock %}
